# obscure-resurrection

./: Cargo.toml  README.md  build-web-zip.sh  index.html
assets/: levels.ldtk
src/: camera.rs  components.rs  config.rs  game_over.rs  levels.rs  main.rs  main_menu.rs  movement.rs  textures.rs  types.rs
src/game/: collision.rs  components.rs  enemy.rs  events.rs  game.rs  mod.rs  player.rs  sfx.rs  ui.rs
src/game/collision/: collision.rs  layer_filters.rs  mod.rs  plugin.rs
src/game/enemy/: components.rs  enemy.rs  mod.rs  shaman_ai.rs
src/game/level/: components.rs  ldtk.rs  mod.rs
src/texture/: components.rs  mod.rs  plugin.rs  systems.rs  textures.rs
