[package]
name = "obscure-resurrection"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

# Audio plugin
bevy_kira_audio = { version = "0.8.0", features = ["wav"] }

# The "atlas" feature is required to work in the WASM export.
# This feature is not in the current release, so we have to pull from main
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", features = ["atlas"] }
# bevy_ecs_ldtk =  "0.1.0"

big-brain = "0.10.0"
heron = { version = "1.2.0", features = ["2d"] }
wasm-bindgen = "0.2.79"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
